Fixed bug that caused CSS overview to report a constrast issue on an invisible element.

--- a/styles/form.css
+++ b/styles/form.css
@@ -128,6 +128,8 @@ select {
 .stars span {
 	visibility: hidden;
 	position: absolute;
+	background-color: var(--primary-background);
+	color: var(--primary-foreground);
 }
 .stars input {
 	appearance: unset;
